src/components/include.scss
/* ... */
nav {
	display: block;

	ul {
		li {
			display: inline;
			padding: 0 20px 0 0;

			.logout a {
				display: none;
				position: absolute;
				right: 20px;
				bottom: 13px;
				font-size: 14px;
			}

			a {
				font-size: 14px;
				font-weight: 100;
				margin: 0;
				padding: 0;
				color: #4c4c4c;
				transition: all 0.2s linear;
			}

			a:hover {
				border: none;
				border-bottom: 2px solid #0093E7;
				padding: 5px 0;
				color: #000;
				text-decoration: none;
			}
		}
	}
}

.darkMode nav {
	ul {
		li {
			a {
				color: #d8d8d8;
			}

			a:hover {
				border-bottom: 2px solid #0093E7;
				color: #fff;
			}
		}
	}
}

h1.logo {
	position: absolute;
	left: 0;
	top: 0;
	margin: 0;
	overflow: hidden;

	a {
		display: block;
		width: 100px;
		height: 0;
		padding: 60px 0 0 10px;
		margin: 10px 0 0 10px;
		background: url('/img/materia-logo-default-lightmode.svg') 50% 100% no-repeat;
		background-size: 80px auto;
	}
}

.darkMode h1.logo {
	a {
		background: url('/img/materia-logo-default-darkmode.svg') 0% 0% no-repeat;
		background-size: 80px auto;
	}
}

.action_button {
	padding: 7px 23px 8px 23px;
	background-color: #ffd439;
	transition: all 0.4s ease-in-out;

	font-weight: 700;
	color: #333;
	font-size: 18px;
	position: relative;
	cursor: pointer;
	display: inline-block;
	user-select: none;

	border-radius: 4px;
	border: none;

	.ng-modal & {
		margin: 5px auto;
	}

	&.green {
		background: #c4dd61;
		color: #525252;

		&:hover {
			background: #d5ea7f;
		}
	}

	&.notification_action {
		font-size: 14px;
		display: none;
		&.enabled {
			display: block;
		}
	}
}

.page, .widget {
	position: relative;
	z-index: 1;
}

.alert-wrapper {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 9998;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0.66);
	display: flex;
	justify-content: center;
	align-items: center;

	.alert-dialog {
		width: 400px;
		text-align: center;
		padding: 15px;
		background: #fff;

		h3 {
			margin: 5px 0;
			font-size: 1.2em;
		}

		.buttons {
			display: block;
			width: 100%;
			margin-top: 5px;

			.action_button {
				display: inline-block;
				margin: 10px 0 5px 0;
			}
		}
	}
}

.darkMode .page, .darkMode .widget {
	.alert-wrapper {
		background: rgba(0,0,0,0.66);

		.alert-dialog {
			background: #21232a;
		}
	}
}

section,
header,
nav,
article,
aside,
footer {
	display: block;
}

.cancel_button {
	color: #555;
	text-decoration: underline;
	margin: 10px 15px;
	font-weight: 400;
}

.popup h2,
.detail h2 {
	color: #0a0a0a;
	font-weight: 900;
	font-size: 20pt;
	margin: 10px auto;
	padding: 0;
	// text-shadow: 0px 1px 0px #ccc;
}

.darkMode
.popup h2,
.darkMode
.detail h2 {
	color: #fff;
}

.error-support span.subtitle {
	font-size: 0.9em;
	margin-top: 0px;
	color: #666;
}

.form-content ul li {
	text-align: left;
}

.qtip {
	position: absolute;
	background: #b944cc;
	border: 4px solid #b944cc;
	z-index: 101;
	color: #fff;
	padding: 10px;
	border-radius: 5px;
	width: 230px;
	font-weight: bold;

	&.top:after,
	&.top:before {
		bottom: 100%;
		left: 50%;
		border: solid transparent;
		content: ' ';
		height: 0;
		width: 0;
		position: absolute;
		pointer-events: none;
	}

	&.top:after {
		border-color: rgba(185, 68, 204, 0);
		border-bottom-color: #b944cc;
		border-width: 20px;
		margin-left: -20px;
	}
	&.top:before {
		border-color: rgba(185, 68, 204, 0);
		border-bottom-color: #b944cc;
		border-width: 26px;
		margin-left: -26px;
	}

	&.right:after {
		left: 100%;
		top: 50%;
		border: solid transparent;
		content: ' ';
		height: 0;
		width: 0;
		position: absolute;
		pointer-events: none;
		border-color: rgba(185, 68, 204, 0);
		border-left-color: #b944cc;
		border-width: 28px;
		margin-top: -28px;
	}
}


.error {
	p {
		min-width: 340px;
		padding: 6px 10px;
		margin: 25px auto;
		background: #ffcfcf;

		color: red;
		font-weight: 600;
		font-size: 17px;
		text-align: center;
		box-sizing: border-box;

	}
}

.success {
	p {
		min-width: 340px;
		padding: 6px 10px;
		margin: 25px auto;
		background: #c4ffdf;

		color: green;
		font-weight: 600;
		font-size: 17px;
		text-align: center;
		box-sizing: border-box;

	}
}

.no_permission {
	ul {
		width: 360px;
		margin: auto;
		text-align: left;
	}
}

.notif-error {
	color: red;
}

